# chip8-interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: chip8.h  display.h  windows_sleep.h
src/: chip8.c  display.c  main.c  windows_sleep.c
